tests/negative/gold/clashing_function_test.gold
tests/negative/clashing_function_test.toit:6:1: error: Redefinition of 'foo'
foo:
^~~
tests/negative/clashing_function_test.toit:3:1: note: First definition of 'foo'
foo:
^~~
Compilation failed.
